# ycli

./: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/main_cli/: main_cli_impl.rs  mod.rs
cli/test/: ycli.rs
command/: Cargo.toml
command/src/: interface.rs
init/: Cargo.toml
init/src/: lib.rs  template_list.rs
utils/: Cargo.toml
utils/src/: lib.rs  log.rs
utils/src/make/: make_input.rs  make_select.rs  mod.rs
utils/src/spinner/: mod.rs
