[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.5",features=["derive"]}
command={path="../command"}
dirs = "5.0.1"
fs_extra = "1.3.0"
indicatif = "0.17.5"
reqwest = {version="0.11.18",features=["json","blocking"]}
serde_json = "1.0.99"
utils={path="../utils"}
